--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 	<title>Status Reporting App in React.js using Appbase </title>
+	<script src="https://fb.me/react-0.13.3.js"></script>
+	<script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
+	<script src="bower_components/appbase-js/browser/appbase.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
 
