--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
 	<script src="bower_components/appbase-js/browser/appbase.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div id="container">
