--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
 		var Input = React.createClass({
 		  render: function () {
-		    return <input type = "text" onKeyPress = {this._handleKeyPress} />;
+		    return (
+		    	<div className="statusInput">
+		    		<h1>What are you doing?</h1>
+		    		<input type = "text" onKeyPress = {this._handleKeyPress} placeholder="Going for skiing"/>
+		    	</div>
+		    )
+
 		  },
 		  _handleKeyPress: function(e) {
 		    if (e.key === 'Enter') {
