Fix the json parsing bug for local storage

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			getInitialState: function(){
 				console.log(localStorage.state);
 				if (localStorage.state){
-					status = localStorage.state
+					status = localStorage.state.status
 				}
 				else
 				{
