--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			getInitialState: function(){
 				console.log(localStorage.state);
 				if (localStorage.state){
-					status = localStorage.state.status
+					status = JSON.parse(localStorage.state).status
 				}
 				else
 				{
