Add Heading to the feed page

--- a/feed.html
+++ b/feed.html
@@ -69,6 +69,7 @@
 
 				return (
 					<div className="row">
+						<h3 className="col s12 center white-text"> Working on Feed</h3>
 						{content}
 					</div>
 				);
