--- a/feed.html
+++ b/feed.html
@@ -21,10 +21,14 @@
 			render: function() {
 				return (
 					<div className="col s12 m6 l4">
-			          <div className="card-panel white">
-			            <div className="card-content gray-text">
-			              <span className="card-title">{this.props.status}</span>
-			            </div>
+			          <div className="card white">
+			              <div className="card-image">
+			              	<img src="https://twitter.com/@yashshah/profile_image?size=original"/>
+			              </div>
+			              <div className="card-content gray-text">
+			              	<span className="card-title text-darken-4">@yashshah is Working on</span>
+			              	<p>{this.props.status}</p>
+			              </div>
 			          </div>
 			        </div>
 				);
