--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
 	<script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
 	<script src="bower_components/appbase-js/browser/appbase.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	 <!-- Compiled and minified CSS -->
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+	<!-- Compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+	<!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
 	<div id="container">
+		<div class="row">
+		<div id = "statusInput" class="col s12 m6 l6"> </div>
+		<div id = "feed" class="col s12 m6 l6"> </div>	
 	</div>
 	<script type="text/jsx">
 
@@ -20,7 +30,7 @@
 
 		    return (
 		    	<div className="statusInput">
-		    		<h1>What are you doing?</h1>
+		    		<h2>What are you doing?</h2>
 		    		<input type = "text" onKeyPress = {this._handleKeyPress} placeholder={this.props.placeholder} ref="statusInput" />
 		    	</div>
 		    )
@@ -153,7 +163,7 @@
 		
 		React.render(
 		  <StreamBrowser />,
-		  document.getElementById('container')
+		  document.getElementById('statusInput')
 		);
 	</script>
 
