Update the text in Feed

--- a/feed.html
+++ b/feed.html
@@ -27,7 +27,7 @@
 			              	<img src={twitterProfilePictureURL}/>
 			              </div>
 			              <div className="card-content gray-text">
-			              	<span className="card-title text-darken-4">{this.props.item.twitterHandle} is Working on</span>
+			              	<span className="card-title text-darken-4">{this.props.item.twitterHandle} is</span>
 			              	<p>{this.props.item.status}</p>
 			              </div>
 			          </div>
