Update the container

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<div id="container">
 		<div class="row">
-		<div id = "statusInput" class="col s12 m6 l6"> </div>
+		<div id = "statusInput" class="col s12 m12 l12"> </div>
 		<div id = "feed" class="col s12 m6 l6"> </div>	
 	</div>
 	<script type="text/jsx">
@@ -53,8 +53,8 @@
 
 		    return (
 		    	<div className="statusInput">
-		    		<h2>What is your Twitter handle?</h2>
-		    		<input type = "text" onKeyPress = {this._handleKeyPress} placeholder="@YourTwitterHandle" ref="nameInput" />
+		    		<h2>What is your Twitter username?</h2>
+		    		<input type = "text" onKeyPress = {this._handleKeyPress} placeholder="@YourTwitterUsername" ref="nameInput" />
 		    	</div>
 		    )
 
