--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<script src="bower_components/appbase-js/browser/appbase.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/jsx" src="js/app.js" ></script>
+	<script type="text/jsx" src="js/feed.js" ></script>
+
 	 <!-- Compiled and minified CSS -->
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
 	<!-- Compiled and minified JavaScript -->
@@ -19,7 +21,7 @@
 	<div id="container">
 		<div class="row">
 		<div id = "statusInput" class="col s12 m12 l12"> </div>
-		<div id = "feed" class="col s12 m6 l6"> </div>	
+		<div id = "feed" class="col s12 m12 l12"> </div>	
 	</div>
 </body>
 </html>
